try fixing color picker being squished in a small display

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
   background-color: #2c72da;
   border-radius: 10px;
   border: solid #000000 2px;
-  height: 650px;
+  height: 680px;
   width: 150px;
   display: flex;
   flex-direction: column;
@@ -72,6 +72,7 @@ body {
 #color-picker {
   width: 100px;
   height: 36px;
+  flex-shrink: 0;
 }
 
 #grid-lines {
